--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,46 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.container {
+  min-height: 300px;
+  background-color: beige;
+  border-radius: 10px;
+  box-shadow: 0 3px 6px -4px rgba(0, 0, 0, 0.12);
+  line-height: 1.5;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+a:hover {
+  text-decoration: none;
+  font-weight: bold;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+span {
+  display: block;
+  font-size: 12px;
 }
 
-.App-link {
-  color: #61dafb;
+.btn-next {
+  font-weight: 500;
+  background-color: yellowgreen;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn-next:hover {
+  background-color: rgb(181, 233, 76);
+}
+
+.btn-first {
+  font-weight: 500;
+  background-color: yellowgreen;
+}
+
+.btn-first:hover {
+  background-color: rgb(181, 233, 76);
+}
+.btn-submit {
+  font-weight: 500;
+  background-color: yellowgreen;
+}
+
+.btn-submit:hover {
+  background-color: rgb(181, 233, 76);
 }
